добавляет открытие меню шапки

--- a/source/index.html
+++ b/source/index.html
@@ -35,33 +35,29 @@
             </svg>
           </a>
         </li>
-        <li class="nav-user__item">
-          <button class="nav-user__toggle" type="button">
-            <span class="visually-hidden">Открыть меню</span>
-            <svg width="16" height="16" viewBox="0 0 16 16" fill="none" xmlns="http://www.w3.org/2000/svg">
-              <path fill-rule="evenodd" clip-rule="evenodd"
-                d="M0 2H16V3.5H0V2ZM0 7.25H16V8.75H0V7.25ZM16 12.5H0V14H16V12.5Z" fill="#333333" />
-            </svg>
-          </button>
-        </li>
       </ul>
     </div>
 
-    <nav class="main-header__menu nav-menu nav-menu--closed">
-      <ul class="nav-menu__list">
-        <li class="nav-menu__item">
-          <a class="nav-menu__link">Главная</a>
-        </li>
-        <li class="nav-menu__item">
-          <a class="nav-menu__link">Каталог</a>
-        </li>
-        <li class="nav-menu__item">
-          <a class="nav-menu__link">Доставка</a>
-        </li>
-        <li class="nav-menu__item">
-          <a class="nav-menu__link">О нас</a>
-        </li>
-      </ul>
+    <nav class="main-header__menu nav-menu nav-menu--closed nav-menu--nojs">
+      <button class="nav-menu__toggle" type="button">
+        <span class="visually-hidden">Открыть меню</span>
+      </button>
+      <div class="nav-menu__container">
+        <ul class="nav-menu__list">
+          <li class="nav-menu__item">
+            <a class="nav-menu__link">Главная</a>
+          </li>
+          <li class="nav-menu__item">
+            <a class="nav-menu__link">Каталог</a>
+          </li>
+          <li class="nav-menu__item">
+            <a class="nav-menu__link">Доставка</a>
+          </li>
+          <li class="nav-menu__item">
+            <a class="nav-menu__link">О нас</a>
+          </li>
+        </ul>
+      </div>
     </nav>
   </header>
 
