--- a/source/index.html
+++ b/source/index.html
@@ -117,7 +117,7 @@
       </ul>
     </section>
     <section class="catalog">
-      <p class="catalog__badge">Каталог</p>
+      <p class="catalog__description">Каталог</p>
       <h2 class="catalog__title">Каталог кофейных напитков</h2>
       <div class="catalog__filter filter">
         <fieldset class="filter__price price">
@@ -147,71 +147,71 @@
           <legend class="milk__title">Наличие молока</legend>
           <ul class="milk__list">
             <li class="milk__item">
-              <label class="control button">
-                <input class="control__input" type="radio" name="milk" value="no-matter" checked>
-                <span class="control__mark"></span>
-                <span class="control__label control__label--font">Неважно</span>
+              <label class="radio-label button">
+                <input class="radio-label__input visually-hidden" type="radio" name="milk" value="no-matter" checked>
+                <span class="radio-label__mark"></span>
+                <span class="radio-label__description">Неважно</span>
               </label>
             </li>
             <li class="milk__item">
-              <label class="control button">
-                <input class="control__input" type="radio" name="milk" value="only-animals">
-                <span class="control__mark"></span>
-                <span class="control__label control__label--font">Только животные</span>
+              <label class="radio-label button">
+                <input class="radio-label__input visually-hidden" type="radio" name="milk" value="only-animals">
+                <span class="radio-label__mark"></span>
+                <span class="radio-label__description">Только животные</span>
               </label>
             </li>
             <li class="milk__item">
-              <label class="control button">
-                <input class="control__input" type="radio" name="milk" value="only-plants">
-                <span class="control__mark"></span>
-                <span class="control__label control__label--font">Только растительное</span>
+              <label class="radio-label button">
+                <input class="radio-label__input visually-hidden" type="radio" name="milk" value="only-plants">
+                <span class="radio-label__mark"></span>
+                <span class="radio-label__description">Только растительное</span>
               </label>
             </li>
             <li class="milk__item">
-              <label class="control button">
-                <input class="control__input" type="radio" name="milk" value="no-milk" disabled>
-                <span class="control__mark"></span>
-                <span class="control__label control__label--font">Без молока</span>
+              <label class="radio-label button">
+                <input class="radio-label__input visually-hidden" type="radio" name="milk" value="no-milk" disabled>
+                <span class="radio-label__mark"></span>
+                <span class="radio-label__description">Без молока</span>
               </label>
             </li>
           </ul>
         </fieldset>
         <fieldset class="filter__country country">
-          <legend class="country__title country__title--font">Страна произрастания</legend>
+          <legend class="country__title">Страна произрастания</legend>
           <ul class="country__list">
             <li class="country__item">
-              <label class="control-checkbox button">
-                <input class="control-checkbox__input" type="checkbox" name="Brazil" checked>
-                <span class="control-checkbox__mark"></span>
-                <span class="control-checkbox__label control-checkbox__label--font">Бразилия</span>
+              <label class="checkbox-label button">
+                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Brazil" checked>
+                <span class="checkbox-label__mark"></span>
+                <span class="checkbox-label__description">Бразилия</span>
               </label>
             </li>
             <li class="country__item">
-              <label class="control-checkbox button">
-                <input class="control-checkbox__input" type="checkbox" name="Ethiopia">
-                <span class="control-checkbox__mark"></span>
-                <span class="control-checkbox__label control-checkbox__label--font">Эфиопия</span>
+              <label class="checkbox-label button">
+                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Ethiopia">
+                <span class="checkbox-label__mark"></span>
+                <span class="checkbox-label__description">Эфиопия</span>
               </label>
             </li>
             <li class="country__item">
-              <label class="control-checkbox button">
-                <input class="control-checkbox__input" type="checkbox" name="Colombia">
-                <span class="control-checkbox__mark"></span>
-                <span class="control-checkbox__label control-checkbox__label--font">Колумбия</span>
+              <label class="checkbox-label button">
+                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Colombia">
+                <span class="checkbox-label__mark"></span>
+                <span class="checkbox-label__description">Колумбия</span>
               </label>
             </li>
             <li class="country__item">
-              <label class="control-checkbox button">
-                <input class="control-checkbox__input" type="checkbox" name="Costa-Rica">
-                <span class="control-checkbox__mark"></span>
-                <span class="control-checkbox__label control-checkbox__label--font">Коста-Рика</span>
+              <label class="checkbox-label button">
+                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Costa-Rica">
+                <span class="checkbox-label__mark"></span>
+                <span class="checkbox-label__description">Коста-Рика</span>
               </label>
             </li>
             <li class="country__item">
-              <label class="control-checkbox button">
-                <input class="control-checkbox__input" type="checkbox" name="Peru" disabled>
-                <span class="control-checkbox__mark"></span>
-                <span class="control-checkbox__label control-checkbox__label--font">Перу</span>
+              <label class="checkbox-label button">
+                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Peru" disabled>
+                <span class="checkbox-label__mark"></span>
+                <span class="checkbox-label__description">Перу</span>
               </label>
             </li>
           </ul>
