настраивает ползунок фильтра

--- a/source/index.html
+++ b/source/index.html
@@ -123,11 +123,11 @@
         <fieldset class="filter__price price">
           <legend class="price__title">Цена</legend>
             <div class="range-scale">
-              <div class="range-bar" style="left: 0; width: 228px">
-                <button class="range-toggle toggle-min" type="button">
+              <div class="range-scale__bar" style="left: 12px; width: 238px">
+                <button class="range-scale__toggle range-scale__toggle--min" type="button">
                   <span class="visually-hidden">Изменить минимальную цену</span>
                 </button>
-                <button class="range-toggle toggle-max" type="button">
+                <button class="range-scale__toggle range-scale__toggle--max" type="button">
                   <span class="visually-hidden">Изменить максимальную цену</span>
                 </button>
               </div>
