--- a/source/index.html
+++ b/source/index.html
@@ -14,8 +14,7 @@
     <a class="main-header__logo header-logo">
       <picture>
         <source media="(min-width: 1440px)" srcset="./img/logo-big.svg">
-        <source media="(min-width: 768px)"
-          srcset="./img/logo-middle.svg">
+        <source media="(min-width: 768px)" srcset="./img/logo-middle.svg">
         <img class="header-logo__image" src="./img/logo-small.svg" width="32" height="36" alt="Логотип Drink2Go">
       </picture>
     </a>
@@ -138,100 +137,102 @@
       <p class="catalog__description">Каталог</p>
       <h2 class="catalog__title">Каталог кофейных напитков</h2>
       <div class="catalog__filter filter">
-        <fieldset class="filter__price price">
-          <legend class="price__title">Цена</legend>
-          <div class="range-scale">
-            <div class="range-scale__bar" style="left: 12px; width: 238px">
-              <button class="range-scale__toggle range-scale__toggle--min" type="button">
-                <span class="visually-hidden">Изменить минимальную цену</span>
-              </button>
-              <button class="range-scale__toggle range-scale__toggle--max" type="button">
-                <span class="visually-hidden">Изменить максимальную цену</span>
-              </button>
+        <div class="filter__wrapper">
+          <fieldset class="filter__price price">
+            <legend class="price__title">Цена</legend>
+            <div class="range-scale">
+              <div class="range-scale__bar" style="left: 12px; width: 138px">
+                <button class="range-scale__toggle range-scale__toggle--min" type="button">
+                  <span class="visually-hidden">Изменить минимальную цену</span>
+                </button>
+                <button class="range-scale__toggle range-scale__toggle--max" type="button">
+                  <span class="visually-hidden">Изменить максимальную цену</span>
+                </button>
+              </div>
             </div>
-          </div>
-          <div class="price__wrapper">
-            <label class="price-label">
-              <input class="price-label__input price-label__input-min" type="number" value="0" name="min-price">
-            </label>
-            <label class="price-label">
-              <input class="price-label__input price-label__input-max" type="number" value="900" name="max-price">
-            </label>
-          </div>
-        </fieldset>
-        <fieldset class="filter__milk milk">
-          <legend class="milk__title">Наличие молока</legend>
-          <ul class="milk__list">
-            <li class="milk__item">
-              <label class="radio-label button">
-                <input class="radio-label__input visually-hidden" type="radio" name="milk" value="no-matter" checked>
-                <span class="radio-label__mark"></span>
-                <span class="radio-label__description">Неважно</span>
+            <div class="price__wrapper">
+              <label class="price-label">
+                <input class="price-label__input price-label__input-min" type="number" value="0" name="min-price">
               </label>
-            </li>
-            <li class="milk__item">
-              <label class="radio-label button">
-                <input class="radio-label__input visually-hidden" type="radio" name="milk" value="only-animals">
-                <span class="radio-label__mark"></span>
-                <span class="radio-label__description">Только животные</span>
+              <label class="price-label">
+                <input class="price-label__input price-label__input-max" type="number" value="900" name="max-price">
               </label>
-            </li>
-            <li class="milk__item">
-              <label class="radio-label button">
-                <input class="radio-label__input visually-hidden" type="radio" name="milk" value="only-plants">
-                <span class="radio-label__mark"></span>
-                <span class="radio-label__description">Только растительное</span>
-              </label>
-            </li>
-            <li class="milk__item">
-              <label class="radio-label button">
-                <input class="radio-label__input visually-hidden" type="radio" name="milk" value="no-milk" disabled>
-                <span class="radio-label__mark"></span>
-                <span class="radio-label__description">Без молока</span>
-              </label>
-            </li>
-          </ul>
-        </fieldset>
-        <fieldset class="filter__country country">
-          <legend class="country__title">Страна произрастания</legend>
-          <ul class="country__list">
-            <li class="country__item">
-              <label class="checkbox-label button">
-                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Brazil" checked>
-                <span class="checkbox-label__mark"></span>
-                <span class="checkbox-label__description">Бразилия</span>
-              </label>
-            </li>
-            <li class="country__item">
-              <label class="checkbox-label button">
-                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Ethiopia">
-                <span class="checkbox-label__mark"></span>
-                <span class="checkbox-label__description">Эфиопия</span>
-              </label>
-            </li>
-            <li class="country__item">
-              <label class="checkbox-label button">
-                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Colombia">
-                <span class="checkbox-label__mark"></span>
-                <span class="checkbox-label__description">Колумбия</span>
-              </label>
-            </li>
-            <li class="country__item">
-              <label class="checkbox-label button">
-                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Costa-Rica">
-                <span class="checkbox-label__mark"></span>
-                <span class="checkbox-label__description">Коста-Рика</span>
-              </label>
-            </li>
-            <li class="country__item">
-              <label class="checkbox-label button">
-                <input class="checkbox-label__input visually-hidden" type="checkbox" name="Peru" disabled>
-                <span class="checkbox-label__mark"></span>
-                <span class="checkbox-label__description">Перу</span>
-              </label>
-            </li>
-          </ul>
-        </fieldset>
+            </div>
+          </fieldset>
+          <fieldset class="filter__milk milk">
+            <legend class="milk__title">Наличие молока</legend>
+            <ul class="milk__list">
+              <li class="milk__item">
+                <label class="radio-label button">
+                  <input class="radio-label__input visually-hidden" type="radio" name="milk" value="no-matter" checked>
+                  <span class="radio-label__mark"></span>
+                  <span class="radio-label__description">Неважно</span>
+                </label>
+              </li>
+              <li class="milk__item">
+                <label class="radio-label button">
+                  <input class="radio-label__input visually-hidden" type="radio" name="milk" value="only-animals">
+                  <span class="radio-label__mark"></span>
+                  <span class="radio-label__description">Только животные</span>
+                </label>
+              </li>
+              <li class="milk__item">
+                <label class="radio-label button">
+                  <input class="radio-label__input visually-hidden" type="radio" name="milk" value="only-plants">
+                  <span class="radio-label__mark"></span>
+                  <span class="radio-label__description">Только растительное</span>
+                </label>
+              </li>
+              <li class="milk__item">
+                <label class="radio-label button">
+                  <input class="radio-label__input visually-hidden" type="radio" name="milk" value="no-milk" disabled>
+                  <span class="radio-label__mark"></span>
+                  <span class="radio-label__description">Без молока</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+          <fieldset class="filter__country country">
+            <legend class="country__title">Страна произрастания</legend>
+            <ul class="country__list">
+              <li class="country__item">
+                <label class="checkbox-label button">
+                  <input class="checkbox-label__input visually-hidden" type="checkbox" name="Brazil" checked>
+                  <span class="checkbox-label__mark"></span>
+                  <span class="checkbox-label__description">Бразилия</span>
+                </label>
+              </li>
+              <li class="country__item">
+                <label class="checkbox-label button">
+                  <input class="checkbox-label__input visually-hidden" type="checkbox" name="Ethiopia">
+                  <span class="checkbox-label__mark"></span>
+                  <span class="checkbox-label__description">Эфиопия</span>
+                </label>
+              </li>
+              <li class="country__item">
+                <label class="checkbox-label button">
+                  <input class="checkbox-label__input visually-hidden" type="checkbox" name="Colombia">
+                  <span class="checkbox-label__mark"></span>
+                  <span class="checkbox-label__description">Колумбия</span>
+                </label>
+              </li>
+              <li class="country__item">
+                <label class="checkbox-label button">
+                  <input class="checkbox-label__input visually-hidden" type="checkbox" name="Costa-Rica">
+                  <span class="checkbox-label__mark"></span>
+                  <span class="checkbox-label__description">Коста-Рика</span>
+                </label>
+              </li>
+              <li class="country__item">
+                <label class="checkbox-label button">
+                  <input class="checkbox-label__input visually-hidden" type="checkbox" name="Peru" disabled>
+                  <span class="checkbox-label__mark"></span>
+                  <span class="checkbox-label__description">Перу</span>
+                </label>
+              </li>
+            </ul>
+          </fieldset>
+        </div>
         <div class="filter__filter-buttons filter-buttons">
           <button class="filter-buttons__apply button" type="button">Применить фильтр</button>
           <button class="filter-buttons__reset button" type="reset">Сбросить фильтр</button>
@@ -255,7 +256,7 @@
           <a href="can-white">
             <h3 class="card__title">Декаф Флэт Уайт</h3>
           </a>
-          <p class="card__description">Кофе без кофеина из Эфиопии
+          <p class="card__description">Кофе без кофеина из Эфиопии <br>
             с натуральным фермерским молоком</p>
           <div class="card__buy">
             <p class="card__price">225₽</p>
@@ -275,7 +276,7 @@
           <a href="can-purple">
             <h3 class="card__title">Декаф Флэт Уайт</h3>
           </a>
-          <p class="card__description">Кофе без кофеина из Эфиопии
+          <p class="card__description">Кофе без кофеина из Эфиопии <br>
             с натуральным фермерским молоком</p>
           <div class="card__buy">
             <p class="card__price">225₽</p>
@@ -295,7 +296,7 @@
           <a href="can-black">
             <h3 class="card__title">Декаф Флэт Уайт</h3>
           </a>
-          <p class="card__description">Кофе без кофеина из Эфиопии
+          <p class="card__description">Кофе без кофеина из Эфиопии <br>
             с натуральным фермерским молоком</p>
           <div class="card__buy">
             <p class="card__price">225₽</p>
@@ -315,7 +316,7 @@
           <a href="can-pink">
             <h3 class="card__title">Декаф Флэт Уайт</h3>
           </a>
-          <p class="card__description">Кофе без кофеина из Эфиопии
+          <p class="card__description">Кофе без кофеина из Эфиопии <br>
             с натуральным фермерским молоком</p>
           <div class="card__buy">
             <p class="card__price">225₽</p>
@@ -335,7 +336,7 @@
           <a href="can-brown">
             <h3 class="card__title">Декаф Флэт Уайт</h3>
           </a>
-          <p class="card__description">Кофе без кофеина из Эфиопии
+          <p class="card__description">Кофе без кофеина из Эфиопии <br>
             с натуральным фермерским молоком</p>
           <div class="card__buy">
             <p class="card__price">225₽</p>
@@ -355,7 +356,7 @@
           <a href="can-yellow">
             <h3 class="card__title">Декаф Флэт Уайт</h3>
           </a>
-          <p class="card__description">Кофе без кофеина из Эфиопии
+          <p class="card__description">Кофе без кофеина из Эфиопии <br>
             с натуральным фермерским молоком</p>
           <div class="card__buy">
             <p class="card__price">225₽</p>
